--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <nav class="navbar">
         <ul class="poppins-regular">
-            <li><a id="brand-name" class="anonymous-pro-bold">ShipDec<span id="brand-highlight">KK</span></a></li>
+            <li> 
+                <a id="brand-name" class="anonymous-pro-bold">
+                    <img src="assets/logo.png">
+                    NurSprout
+                </a>
+            </li>
             <li id="item-center"><a href="index.html" class="nav-item">Home</a>
                 <a href="nuri.html" class="nav-item">NuRi</a>
                 <a href="contacts.html" class="nav-item">Contacts</a>
@@ -22,7 +27,6 @@
                     <a href="subscribe.html" class="nav-item">Sign Up</a>
                 </div>
             </li>
-            
         </ul>
     </nav>
 </body>
