nambah component main-header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li id="item-center"><a href="index.html" class="nav-item">Home</a>
-                <a href="nuri.html" class="nav-item">NuRi</a>
+                <a href="./nuri/nuri.html" class="nav-item">NuRi</a>
                 <a href="contacts.html" class="nav-item">Contacts</a>
                 <a href="settings.html" class="nav-item">Settings</a>
             </li>
