--- a/nuri/nuri.html
+++ b/nuri/nuri.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../master.css">
+    <link rel="stylesheet" href="../components/main-header.css"/>
+    <script defer src="../components/main-header.js"></script>
 </head>
 <body>
-    Alex udah gak gay lagi
+    <main-header></main-header>
 </body>
 </html>
