Change header into template header

--- a/index.html
+++ b/index.html
@@ -5,29 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="components/main-header.css">
+    <script defer src="components/main-header.js"></script>
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="poppins-regular">
-            <li> 
-                <a id="brand-name" class="anonymous-pro-bold">
-                    <img src="assets/logo.png">
-                    NurSprout
-                </a>
-            </li>
-            <li id="item-center"><a href="index.html" class="nav-item">Home</a>
-                <a href="./nuri/nuri.html" class="nav-item">NuRi</a>
-                <a href="contacts.html" class="nav-item">Contacts</a>
-                <a href="settings.html" class="nav-item">Settings</a>
-            </li>
-            
-            <li id="item-left">
-                <div id="nav-buttons">
-                    <a href="subscribe.html" class="nav-item">Sign Up</a>
-                    <a href="subscribe.html" class="nav-item">Sign Up</a>
-                </div>
-            </li>
-        </ul>
-    </nav>
+    <main-header></main-header>
+
+    <section>
+        <div id="hero-container">
+            <div id="hero-title" class="plus-jakarta-sans-bold">
+                <h1>Nurture Your Little Sprout</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
