Landing Page progress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <section>
         <div id="hero-container">
             <div id="hero-title" class="plus-jakarta-sans-bold">
-                <h1>Nurture Your Little Sprout</h1>
+                    <h1>Nurture Your Little Sprout</h1>
+                    <p>Take care of your little baby easily with NurSprout</p>
             </div>
         </div>
     </section>
