Landing Page Features & Benefits section

--- a/index.html
+++ b/index.html
@@ -46,13 +46,32 @@
                 </div>
     
                 <h3 class="poppins-semibold">Stay in Control</h3>
-                <p class="quicksand-regular">With organized data and insights at your fingertips, you can confidently manage your baby’s needs, spot irregularities early, and spend more time enjoying precious moments.</p>
+                <p class="quicksand-regular">With organized data and insights at your fingertips, you can confidently manage your baby's needs, spot irregularities early, and spend more time enjoying precious moments.</p>
             </div>
         </div>
     </section>
 
     <section id="features-benefits">
-        
+        <div id="features-container">
+            <h2 class="plus-jakarta-sans-bold" id="feature-title">Features & Benefits</h2>
+            <div data-point="trackNutrition" class="features selected">
+                <h3 class="plus-jakarta-sans-semibold">Track Nutrition</h3>
+                <div class="features-desc">
+                    <p>Keep a complete record of your baby's feeding routines. Log what your baby eats, how much, and when. helping you stay on top of their nutritional needs and spot any changes in appetite or growth patterns over time. Get recommendations on enviroment-friendly food options.</p>
+                </div>
+            </div>
+            <div data-point="logsNapBed" class="features">
+                <h3 class="plus-jakarta-sans-semibold">Logs Naps and Bedtime</h3>
+                <div class="features-desc"></div>
+            </div>
+            <div data-point="aiChatbot" class="features">
+                <h3 class="plus-jakarta-sans-semibold">AI Chatbot</h3>
+                <div class="features-desc"></div>
+            </div>
+        </div>
+        <div id="features-img"></div>
     </section>
+
+    <script src="landing-scripts.js"></script>
 </body>
 </html>
