--- a/homepage.html
+++ b/homepage.html
@@ -12,8 +12,8 @@
             <div class="profile-picture">
                 <div class="user-info">
                     <h2>Little Angel</h2>
-                    <div class="sleep"></div>
-                    <div class="nutrition"></div>
+                    <div class="sleep"><span class="bar"></span></div>
+                    <div class="nutrition"><span class="bar"></span></div>
                 </div>
             </div>
         </div>
