Working on Customer Testimony section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,49 @@
         <div id="features-img"></div>
     </section>
 
+    <section id="customer-testimony">
+        <h2 class="plus-jakarta-sans-bold" id="testimony-title">Customer Testimony</h2>
+        <div id="customer-testimony-container">
+            <div class="testimony-container">
+                <div class="small-testimony">
+                    <div class="picture-container">
+                        <img src="assets/customer1.jpg">
+                    </div>
+                    <div class="testimony-text">
+                        <span class="quote">″</span>
+                        <p>I had an issue syncing my account and they fixed it in no time. Amazing service!</p>
+                        <p class="customer-name">— Hannah</p>
+                    </div>
+                </div>
+
+                <div class="small-testimony">
+                    <div class="picture-container">
+                        <img src="assets/customer2.jpg">
+                    </div>
+                    <div class="testimony-text">
+                        <span class="quote">″</span>
+                        <p>Super helpful app, and the support team is always quick to respond!</p>
+                        <p class="customer-name">— Jacob</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="testimony-container">
+                <div id="big-testimony">
+                    <div class="picture-container">
+                        <img src="assets/customer3.jpg">
+                    </div>
+                    <div class="testimony-text">
+                        <span class="quote">″</span>
+                        <p>As a busy working mom, I rely on NurSprout every day to track my baby's feedings and sleep. It's become a part of our daily routine, and honestly, I don't know how I'd manage without it. When I accidentally deleted a log, I panicked, but I reached out to support, and they restored everything within hours. They were kind, professional, and seemed to care about helping me. It's rare to find that level of service in an app.</p>
+                        <p class="customer-name">— Vivian</p>
+                    </div>
+                </div>
+            </div>
+        </div>   
+    </section>
+    
+
     <script src="landing-scripts.js"></script>
 </body>
 </html>
