Input type correction

--- a/registration/register.html
+++ b/registration/register.html
@@ -21,7 +21,7 @@
                     <!--
                     <label for="email">Email Address</label>
                     -->
-                    <input type="email" name="email" placeholder="Email Address" class="quicksand-regular">
+                    <input type="text" name="email" placeholder="Email Address" class="quicksand-regular">
                 </div>
 
                 <div class="form-section">
