--- a/registration/register.html
+++ b/registration/register.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../master.css">
+    <link rel="stylesheet" href="/master.css">
     <link rel="stylesheet" href="register.css">
-    <link rel="stylesheet" href="../components/main-header.css">
-    <script defer src="../components/main-header.js"></script>
+    <link rel="stylesheet" href="/components/main-header.css">
+    <script defer src="/components/main-header.js"></script>
 </head>
 <body>
     <main-header></main-header>
@@ -15,7 +15,7 @@
 
     <div id="form-wrapper">
         <div id="form-container">
-            <h2 class="quicksand-regular">Create an account</h2>
+            <h2 class="quicksand-regular">Sign Up</h2>
             <form>
                 <div class="form-section">
                     <!--
@@ -34,15 +34,18 @@
                 <button type="submit" id="form-button" class="quicksand-bold">SIGN UP</button>
             </form>
 
-            <div>
-                <h3>Or</h3>
+            <div id="divider">
+                <span class="quicksand-bold">or</span>
             </div>
 
             <div id="sign-up-method">
-
+                <img src="/assets/Google.png">
+                <img src="/assets/Facebook.png">
+                <img src="/assets/Apple.png">
             </div>
-
-            <a href="login.html">Already have an account?</a>
+            <div id="have-account">
+                <a href="login.html" class="quicksand-regular">Already have an account?</a>
+            </div>
         </div>
     </div>
     
