Complete Login Page

--- a/registration/login.html
+++ b/registration/login.html
@@ -31,11 +31,16 @@
                     <input type="password" name="password" placeholder="Password" class="quicksand-regular">
                 </div>
 
-                <div class="form-section" id="checkbox">
-                    <input type="checkbox" name="remember" id="remember">
+                <div class="form-section quicksand-regular" id="checkbox">
+                    <span>
+                        <input type="checkbox" name="remember" id="remember">
+                        Remember me
+                    </span>
+    
+                    <a href="" id="forget-password">Forget password?</a>
                 </div>
 
-                <button type="submit" id="form-button" class="quicksand-bold">SIGN UP</button>
+                <button type="submit" id="form-button" class="quicksand-bold">LOGIN</button>
             </form>
 
             <div id="divider">
