CTA Button in Landing Page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div id="hero-title" >
                     <h1 class="plus-jakarta-sans-bold">Nurture Your Little Sprout</h1>
                     <p class="plus-jakarta-sans-regular">Take care of your little baby easily with NurSprout</p>
+                    <a href="/registration/register.html" id="cta-button" class="quicksand-bold">Sign Up</a>
             </div>
         </div>
     </section>
