semoga besok bisa kelar

--- a/nuri/nuri.html
+++ b/nuri/nuri.html
@@ -32,7 +32,7 @@
         <div class="nuri-sidebar" id="opened-sidebar">
             <div class="icon-container" id="main-container">
                 <button class="nuri-buttons" onclick="sidebar_close()"><span class="material-symbols-outlined nuri-icons hover">left_panel_close</span></button>
-                <div class="action-icon" id="main-ai-container"">
+                <div class="action-icon" id="main-ai-container">
                     <button class="nuri-buttons"><span class="material-symbols-outlined nuri-icons hover">search</span></button>
                     <button class="nuri-buttons"><span class="material-symbols-outlined nuri-icons hover">add_comment</span></button>
                 </div>
@@ -77,11 +77,14 @@
                         <p>Not sure where to start? Just tell NuRi what you need — a task, a question, or anything else — and NuRi will handle the rest!</p>
                     </div>
                     <div class="nuri-chat-buttons">
-
+                        <button>test</button>
+                        <button>test</button>
+                        <button>test</button>
+                        <button>test</button>  
                     </div>
             </div>
             <div class="nuri-textbox">
-
+                 <textarea class="user-input" placeholder="Ask Anything..."></textarea> 
             </div>
         </div>
 
