--- a/home.html
+++ b/home.html
@@ -6,8 +6,12 @@
     <title>Document</title>
     <script defer src="components/main-header.js"></script>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="components/main-header.css">
 </head>
 <body>
+    <main-header></main-header>
+
     <div class="container">
         <!-- header -->
         <div class="header">
