--- a/home.html
+++ b/home.html
@@ -15,64 +15,242 @@
     <div class="container">
         <!-- header -->
         <div class="header">
-            <div class="profile-picture">
-                <div class="user-info">
-                    <h2>Little Angel</h2>
-                    <div class="sleep"><span class="bar"></span></div>
-                    <div class="nutrition"><span class="bar"></span></div>
-                </div>
+            <div class="profile-picture"></div>
+            <div class="icons">
+                <span class="material-symbols-outlined">nights_stay</span>
+                <span class="material-symbols-outlined">nutrition</span>
+            </div>
+            <div class="user-info">
+                <h2 class="name">Little Angel</h2>
+                <div class="sleep"><div class="sleep-filler"></div></div>
+                <div class="nutrition"><div class="nutrition-filler"></div></div>
             </div>
         </div>
 
         <!-- food log -->
-        <div class="food-log">
-            <input type="text" placeholder="Enter your food log here..">
-            <button class="sumbit-log">&#9658;</button>
+        <div class="food-log-border">
+            <div class="food-log">
+                <input type="text" class="food-input" placeholder="Enter your food log here..">
+                <button class="submit-log"><span class="material-symbols-outlined" id="send">send</span></button>
+            </div>
         </div>
 
         <!-- sleep data  -->
         <div class="sleep-container">
-            <div class="panel">
-                <h3>Sleep Trends</h3>
-                <div class="toggles">
-                    <div class="7D">7D</div>
-                    <div class="14D">14D</div>
-                    <div class="30D">30D</div>
+            <div class="sleep-panel">
+                <div class="row-flex">
+                    <h3>Sleep Trends</h3>
+                    <div class="toggles">
+                        <button class="Day7">7D</button>
+                        <button class="Day14">14D</button>
+                        <button class="Day30">30D</button>
+                    </div>
                 </div>
-                <div class="graph"></div>
+                <div class="column-flex">
+                    <p class="sleep-date">23 apr 2025 - 29 apr 2025</p>
+                    <div class="row-flex" id="nap">
+                        <div class="first-item">
+                            <div class="bluecirc"></div>
+                            <div class="nap-tot">
+                                <p>Nap total avg</p>
+                                <p>1h 35m</p>
+                            </div>
+                        </div>
+
+                        <div class="second-item">
+                            <div class="whitecirc"></div>
+                            <div class="nap-avg">
+                                <p>Daily nap avg</p>
+                                <p>2h 3m</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="sleep-graph" src="assets/SleepTrendsGraph.jpeg" alt="graph">
+                </div>
             </div>
-        </div>
-        <div class="bedtime-container">
-            <div class="panel">
+            <div class="bedtime-panel">
                 <h3>Bedtime</h3>
+                <div class="column-flex">
+                    <p class="bedtime-date">23 apr 2025 - 29 apr 2025</p>
+                        <div class="row-flex" id="nap">
+                            <div class="first-item">
+                                <div class="yellowcirc"></div>
+                                <div class="nap-tot">
+                                    <p>Typical morning rise</p>
+                                    <p>6:10 am</p>
+                                </div>
+                            </div>
+    
+                            <div class="second-item">
+                                <div class="bluecirc"></div>
+                                <div class="nap-avg">
+                                    <p>Typical Bedtime</p>
+                                    <p>8:12 pm</p>
+                                </div>
+                            </div>
+                        </div>
+                    <img class="bedtime-graph" src="/assets/BedtimeGraph.jpeg" alt="">
+                </div>
             </div>
-            <div class="graph"></div>
         </div>
+
+        <!-- adjust sleep time  -->
+        <button class="adjust-sleep-time">
+            <span class="material-symbols-outlined" id="adjust">nights_stay</span>
+            <p class="adjust-text">Adjust Sleep Time</p>
+        </button>
 
         <!-- nutrition data  -->
-        <div class="nutrition-container">
-            <div class="panel">
+        <div class="nutrition-intake">
+            <div class="intake-panel">
+                <div class="row-flex">
+                    <h3>Nutrition Intake</h3>
+                    <div class="toggles">
+                        <button class="Day7">7D</button>
+                        <button class="Day14">14D</button>
+                        <button class="Day30">30D</button>
+                    </div>
+                </div>
+                <div class="column-flex">
+                    <p class="nutrition-date">23 apr 2025 - 29 apr 2025</p>
+                    <div class="row-flex" id="nap">
+                        <div class="first-item">
+                            <div class="yellowcirc"></div>
+                            <div class="nutrition-avg">
+                                <p>Nutrition intake avg</p>
+                                <p>87%</p>
+                            </div>
+                        </div>
+
+                        <div class="second-item">
+                            <div class="whitecirc"></div>
+                            <div class="daily-avg">
+                                <p>Daily Intake avg</p>
+                                <p>93%</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="nutrition-intake-graph" src="assets/NutritionIntake.jpeg" alt="graph">
+
+                    <!-- food recommendation  -->
+                    <h3>Sustainable Food Recommendation</h3>
+                    <div class="row-flex" id="recommend">
+                        <div class="rec">
+                            <img class="rec-img" src="assets/avocado.jpg" alt="">
+                            <p class="rec-txt">Avocado</p>
+                        </div>
+                        <div class="rec">
+                            <img class="rec-img" src="assets/banana.jpeg" alt="">
+                            <p class="rec-txt">Banana</p>
+                        </div>
+                        <div class="rec">
+                            <img class="rec-img" src="assets/pumpkin.webp" alt="">
+                            <p class="rec-txt">Pumpkin</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="nutrition-list">
                 <h3>Nutrition List</h3>
-                <ul class="nutrition-list">
-                    <li>Iron<span class="bar"></span>65%</li>
-                    <li>Calcium<span class="bar"></span>75%</li>
-                    <li>Vitamin D<span class="bar"></span>40%</li>
-                    <li>Vitamin A<span class="bar"></span>35%</li>
-                    <li>Vitamin C<span class="bar"></span>18%</li>
-                    <li>Zinc<span class="bar"></span>55%</li>
-                    <li>Protein<span class="bar"></span>100%</li>
-                    <li>Carbohydrates<span class="bar"></span>30%</li>
-                    <li>Fats<span class="bar"></span>25%</li>
-                </ul>
+
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Iron</span>
+                      <span>1.1 / 11 mg</span>
+                      <span>10%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 10%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Calcium</span>
+                      <span>0 / 260 mg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Vitamin D</span>
+                      <span>0 / 10 mcg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Vitamin A</span>
+                      <span>0 / 500 mcg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Vitamin C</span>
+                      <span>0 / 50 mg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Zinc</span>
+                      <span>0 / 5 mg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Protein</span>
+                      <span>0 / 11 g</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Carbohydrates</span>
+                      <span>0 / 95 g</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
+                <div class="nutrient">
+                    <div class="top-row">
+                      <span>Fats</span>
+                      <span>0 / 11 mg</span>
+                      <span>0%</span>
+                    </div>
+                    <div class="bar-container">
+                      <div class="bar-fill" style="width: 0%"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <!-- recommended food  -->
-        <div class="recommendation-panel">
-            <div class="rec"><p>Avocado</p></div>
-            <div class="rec"><p>Banana</p></div>
-            <div class="rec"><p>Pumpkin</p></div>
-        </div>
+        <!-- Add nutrition  -->
+        <button class="add-nutrition">
+            <span class="material-symbols-outlined" id="nutrition">nutrition</span>
+            <p class="add-nutrition-text">Add nutrition</p>
+        </button>
     </div>
 </body>
 </html>
