better food logging example + bottom padding container

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
         <!-- food log -->
         <div class="food-log-border">
             <div class="food-log">
-                <input type="text" class="food-input" placeholder="Enter your food log here..">
+                <input type="text" class="food-input" placeholder="Enter your food log here.. (ex: Banana 1tsp, Avocado 4tsp, ...)">
                 <button class="submit-log"><span class="material-symbols-outlined" id="send">send</span></button>
             </div>
         </div>
