rapihin nuri chatbot

--- a/nuri/nuri.html
+++ b/nuri/nuri.html
@@ -94,7 +94,10 @@
                     </div>
             </div>
             <div class="nuri-textbox">
-                 <textarea class="user-input" placeholder="Ask Anything..."></textarea>
+                <div class="textbox">
+                    <textarea class="user-input" placeholder="Ask Anything..."></textarea>
+                    <a href=""><span class="material-symbols-outlined nuri-icons" id="send-chat">send</span></a> 
+                </div>
                  <hr class="rounded">
                  <div class="textbox-qa">
                      <button class="attach-button">
