Add href to view sleep report

--- a/nuri/nuri.html
+++ b/nuri/nuri.html
@@ -81,10 +81,12 @@
                             <span class="material-symbols-outlined nuri-icons" id="qa-insight">lightbulb</span>
                             <p><b>NuRI'S Baby Insight</b></p>  
                         </button>
+                        <a href="/nuri/sleep-report.html">
                         <button class="nc-button">
                             <span class="material-symbols-outlined nuri-icons" id="qa-sleep">bedtime</span>
                             <p><b>View Sleep Report</b></p>  
                         </button>
+                        </a>
                         <button class="nc-button"><span class="material-symbols-outlined nuri-icons" id="qa-analyze">biotech</span>
                             <p><b>Quick Analyze</b></p>  
                         </button>
@@ -95,8 +97,8 @@
             </div>
             <div class="nuri-textbox">
                 <div class="textbox">
-                    <textarea class="user-input" placeholder="Ask Anything..."></textarea>
-                    <a href=""><span class="material-symbols-outlined nuri-icons" id="send-chat">send</span></a> 
+                    <textarea class="user-input" placeholder="Ask Anything... (ex. View sleep report)"></textarea>
+                    <a href="/nuri/sleep-report.html"><span class="material-symbols-outlined nuri-icons" id="send-chat">send</span></a> 
                 </div>
                  <hr class="rounded">
                  <div class="textbox-qa">
