Fix relative paths

--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="components/main-header.js"></script>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="master.css">
-    <link rel="stylesheet" href="components/main-header.css">
+    <script defer src="/components/main-header.js"></script>
+    <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="/components/main-header.css">
 </head>
 <body>
     <main-header></main-header>
