--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="master.css">
-    <link rel="stylesheet" href="landing.css">
-    <link rel="stylesheet" href="components/main-header.css">
-    <script defer src="components/main-header.js"></script>
+    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="/landing.css">
+    <link rel="stylesheet" href="/components/main-header.css">
+    <script defer src="/components/main-header.js"></script>
 </head>
 <body>
     <main-header></main-header>
@@ -116,6 +116,6 @@
     </section>
     
 
-    <script src="landing-scripts.js"></script>
+    <script src="/landing-scripts.js"></script>
 </body>
 </html>
