--- a/nuri/sleep-report.html
+++ b/nuri/sleep-report.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../master.css">
+    <link rel="stylesheet" href="/master.css">
     <link rel="stylesheet" href="nuri.css">
-    <link rel="stylesheet" href="../components/main-header.css"/>
+    <link rel="stylesheet" href="/components/main-header.css"/>
     <script src="nuri.js"></script>
-    <script defer src="../components/main-header.js"></script>
+    <script defer src="/components/main-header.js"></script>
 </head>
 <body>
     <main-header></main-header>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="nuri-textbox">
-                 <textarea class="user-input" placeholder="Ask Anything..."></textarea>
+                 <textarea class="user-input" placeholder="Ask Anything... (ex. View sleep report)"></textarea>
                  <hr class="rounded">
                  <div class="textbox-qa">
                      <button class="attach-button">
