add security page

--- a/settings/acc-settings.html
+++ b/settings/acc-settings.html
@@ -22,7 +22,7 @@
             <button>Personal Info</button>
         </a>
 
-        <a>
+        <a href="/settings/security.html">
             <button>Security</button>
         </a>
 
