--- a/settings/security.html
+++ b/settings/security.html
@@ -10,18 +10,18 @@
 </head>
 <body>    
     <div class="Title">
-        <h1 class="Header">Personal Info</h1>
+        <h1 class="Header">Security</h1>
     </div>
 
     <div class="textbox">
-        <p class="static">Name</p>
-        <p class="static">Gender</p>
-        <p class="static">Birthday</p>
-        <p class="static">Email</p>
-        <p class="static">Phone</p>
-        <p class="changes">AAA</p>
-        <p class="changes">Male</p>
-        <p class="changes">8/8/88</p>
+        <p class="static">Password</p>
+        <p class="static">2-Step</p>
+        <p class="static">2-Step Phone</p>
+        <p class="static">Recovery Email</p>
+        <p class="static">Recovery Phone</p>
+        <p class="changes">********</p>
+        <p class="changes">Yes</p>
+        <p class="changes">8888-8888-8888</p>
         <p class="changes" id="email">AAAA@gmail.com</p>
         <p class="changes">8888-8888-8888</p>
     </div>
@@ -35,7 +35,5 @@
             <button id="return">Return</button>
         </a>
     </div>
-    <script src="/registration/register-scripts.js"></script>
 </body>
-
 </html>
