Adding Nutrition Information for Nutrition Page

--- a/nutrition.html
+++ b/nutrition.html
@@ -31,5 +31,42 @@
         </div>
       </div>
     </div>
+
+    <!-- Nutrition Intake -->
+    <div class="main-container">
+      <div class="food-header">
+        <img src="./assets/banana.jpeg" alt="" />
+        <div class="food-texts">
+          <div class="food-category">Fruits</div>
+          <div class="food-name">Banana</div>
+          <h2>45 kcal / 50g</h2>
+        </div>
+      </div>
+      <div class="sub-container">
+        <div class="nutrition-information">
+          <div class="nutrition-texts">
+            <h2 class="carbs">Carbs</h2>
+            <h2 class="protein">Protein</h2>
+            <h2 class="fat">Fat</h2>
+          </div>
+        </div>
+        <div class="right-container">
+          <div class="time">TIME 00:00 AM</div>
+          <div class="serving-size">Serving Size</div>
+        </div>
+      </div>
+      <div class="note">
+        <h5>Add Note</h5>
+
+        <div class="note-input">
+          <textarea
+            name="note"
+            id="note"
+            rows="3"
+            placeholder=" Write your note here..."
+          ></textarea>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
