--- a/nuri/sleep-report.html
+++ b/nuri/sleep-report.html
@@ -76,17 +76,15 @@
                     <p>View sleep report</p>
                 </div>
 
-                <div class="chat-bubble chat-ai">
+                <div class="chat-bubble chat-ai typewriter-multiline" id="typewriter">
                     <h3>Berikut laporan tidur terbaru bayi Anda pada 3 Februari 2025:</h3>
-                    <div class="divider"></div>
                     <p class="chat-points">🕒 Total tidur: 9 Jam 24 Menit</p>
                     <p class="chat-points">🌙 Tidur malam: 9 Jam 24 Menit</p>
                     <p class="chat-points">☀️ Tidur siang: -</p>
                     <p class="chat-points">🔄 Bangun tengah malam: Tidak terjadi</p>
                     <p class="chat-points">📈 Skor kualitas tidur: 90% (Sangat Baik!)</p>
-                    <p>Tidur bayi Anda sangat optimal tanpa gangguan! Pertahankan rutinitas tidur yang sudah baik ini untuk menjaga kualitas istirahatnya.</p> <br>
+                    <p>Tidur bayi Anda sangat optimal tanpa gangguan! Pertahankan rutinitas tidur yang sudah baik ini untuk menjaga kualitas istirahatnya.</p>
                     <h3>Mau saya bantu dengan sesuatu?</h3>
-                    <div class="divider"></div>
                     <p class="chat-points">1️. Lihat tren mingguan 📅 – Cek pola tidur selama seminggu terakhir</p>
                     <p class="chat-points">2️. Dapatkan tips tidur 🌿 – Saran khusus untuk menjaga kualitas tidur tetap optimal</p>
                     <p class="chat-points">3️. Catat tidur siang sekarang 😴 – Tambahkan tidur siang hari ini dengan cepat</p>
@@ -94,8 +92,10 @@
                 </div>
             </div>
             <div class="nuri-textbox">
-                 <textarea class="user-input" placeholder="Ask Anything... (ex. View sleep report)"></textarea>
-                 <hr class="rounded">
+                <div class="textbox">
+                    <textarea class="user-input" placeholder="Ask Anything... (ex. View sleep report)"></textarea>
+                    <a href="/nuri/sleep-report.html"><span class="material-symbols-outlined nuri-icons" id="send-chat">send</span></a> 
+                </div>                 <hr class="rounded">
                  <div class="textbox-qa">
                      <button class="attach-button">
                          <span class="material-symbols-outlined nuri-icons">attach_file</span>
@@ -111,5 +111,6 @@
 
 
     </div>
+    <script src="text-animation.js"></script>
 </body>
 </html>
