add header + add settings to header

--- a/settings/acc-settings.html
+++ b/settings/acc-settings.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="settingstyle.css">
-    <link rel="stylesheet" href="acc-settings.html">
-    <title>NurSprout</title>
+    <link rel="stylesheet" href="/master.css">
+    <script defer src="/components/main-header.js"></script>
+    <link rel="stylesheet" href="/components/main-header.css">  
+      <title>NurSprout</title>
 </head>
-<body>    
-    <div class="Title">
+<body> 
+    <main-header></main-header>
+    <div class="container">
+        <div class="Title">
         <h1 class="Header">Account Settings</h1>
     </div>
     
     <div class="UserProfile">
         <img class="pfp" src="/assets/pfp.png">
-        <h1 class="Name">Name</h1>
+        <h1 class="Name">Bob</h1>
     </div>
 
     <div class="buttons">
@@ -43,6 +47,8 @@
         <a href="/settings/Settings.html">
             <button id="back">Back</button>
         </a>
+      </div>
     </div>
+    
 </body>
 </html>
