--- a/settings/personal-info.html
+++ b/settings/personal-info.html
@@ -9,6 +9,10 @@
     <title>NurSprout</title>
 </head>
 <body>    
+    <div class="container">
+
+
+    </div>
     <div class="Title">
         <h1 class="Header">Personal Info</h1>
     </div>
@@ -19,7 +23,7 @@
         <p class="static">Birthday</p>
         <p class="static">Email</p>
         <p class="static">Phone</p>
-        <p class="changes">AAA</p>
+        <p class="changes">Bob</p>
         <p class="changes">Male</p>
         <p class="changes">8/8/88</p>
         <p class="changes" id="email">AAAA@gmail.com</p>
@@ -27,7 +31,7 @@
     </div>
 
     <a>
-            <button>Edit Info</button>
+            <button id="edit">Edit Info</button>
     </a>
 
     <div class="backbutton">
