link home to nutrition

--- a/home.html
+++ b/home.html
@@ -247,10 +247,13 @@
         </div>
         
         <!-- Add nutrition  -->
-        <button class="add-nutrition">
+         <a href="nutrition.html">
+            <button class="add-nutrition">
             <span class="material-symbols-outlined" id="nutrition">nutrition</span>
             <p class="add-nutrition-text">Add nutrition</p>
-        </button>
+             </button>
+         </a>
+       
     </div>
 
     <script src="home.js"></script>
