Bringing back Christian Code

--- a/home.html
+++ b/home.html
@@ -106,7 +106,7 @@
       </div>
 
       <!-- adjust sleep time  -->
-      <button class="adjust-sleep-time">
+      <button class="adjust-sleep-time" id="adjust-sleep-time">
         <span class="material-symbols-outlined" id="adjust">nights_stay</span>
         <p class="adjust-text">Adjust Sleep Time</p>
       </button>
@@ -262,7 +262,7 @@
       </div>
 
       <!-- Add nutrition  -->
-      <button class="add-nutrition">
+      <button class="add-nutrition" id="add-nutrition">
         <span class="material-symbols-outlined" id="nutrition">nutrition</span>
         <p class="add-nutrition-text">Add nutrition</p>
       </button>
