Adding confirmation button on nutrition page

--- a/nutrition.html
+++ b/nutrition.html
@@ -98,6 +98,10 @@
           ></textarea>
         </div>
       </div>
+
+      <button class="confirm-button" id="confirm-button">
+        <p id="confirm-button-text">confirm</p>
+      </button>
     </div>
 
     <script src="nutrition.js"></script>
