--- a/settings/personal-info.html
+++ b/settings/personal-info.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/master.css">
     <link rel="stylesheet" href="settingstyle.css">
- 
+    <script defer src="/components/main-header.js"></script>
+    <link rel="stylesheet" href="/components/main-header.css">
     <title>NurSprout</title>
 </head>
 <body>    
+     <main-header></main-header>
     <div class="container">
 
 
