--- a/settings/security.html
+++ b/settings/security.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/master.css">
     <link rel="stylesheet" href="settingstyle.css">
- 
+    <script defer src="/components/main-header.js"></script>
+    <link rel="stylesheet" href="/components/main-header.css">
     <title>NurSprout</title>
 </head>
 <body>    
+    <main-header></main-header>
     <div class="Title">
         <h1 class="Header">Security</h1>
     </div>
@@ -27,7 +29,7 @@
     </div>
 
     <a>
-            <button>Edit Info</button>
+            <button id="edit">Edit Info</button>
     </a>
 
     <div class="backbutton">
