--- a/nutrition.html
+++ b/nutrition.html
@@ -12,98 +12,104 @@
   <body>
     <main-header></main-header>
 
-    <!-- search bar & items -->
-    <div class="search-container">
-      <div class="search-bar">
-        <form>
-          <input type="text" placeholder="Search..." />
-        </form>
-      </div>
-      <div class="item-container">
-        <div class="item">
-          <img src="./assets/banana.jpeg" alt="x" />
-          <p>Banana</p>
+    <div class="main-page-container">
+      <!-- search bar & items -->
+      <div class="search-container">
+        <div class="search-bar">
+          <form>
+            <input type="text" placeholder="Search..." />
+          </form>
         </div>
-        <div class="item">
-          <img src="./assets/avocado.jpg" alt="x" />
-          <p>Avocado</p>
+        <div class="item-container">
+          <div class="item">
+            <img src="./assets/banana.jpeg" alt="x" />
+            <p>Banana</p>
+          </div>
+          <div class="item">
+            <img src="./assets/avocado.jpg" alt="x" />
+            <p>Avocado</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- Nutrition Intake -->
-    <div class="main-container">
-      <div class="food-header">
-        <img src="./assets/banana.jpeg" alt="" />
-        <div class="food-texts">
-          <div class="food-category">Fruits</div>
-          <div class="food-name">Banana</div>
-          <h2>45 kcal / 50g</h2>
-        </div>
-      </div>
-      <div class="sub-container">
-        <div class="nutrition-information">
-          <div class="nutrition-texts">
-            <h2 class="carbs">Carbs</h2>
-            <h2 class="protein">Protein</h2>
-            <h2 class="fat">Fat</h2>
+      <!-- Nutrition Intake -->
+      <div class="main-container">
+        <div class="food-header">
+          <img src="./assets/banana.jpeg" alt="" />
+          <div class="food-texts">
+            <div class="food-category">Fruits</div>
+            <div class="food-name">Banana</div>
+            <h2>45 kcal / 50g</h2>
           </div>
         </div>
-        <div class="right-container">
-          <div class="time">
-            <div class="label">TIME</div>
-            <input
-              id="hour"
-              type="number"
-              min="1"
-              max="12"
-              value="12"
-              inputmode="numeric"
-            />
-            <span class="separator">:</span>
-            <input
-              id="minute"
-              type="number"
-              min="0"
-              max="59"
-              value="00"
-              inputmode="numeric"
-            />
-            <span id="meridiem" class="time-part" role="button">AM</span>
+        <div class="sub-container">
+          <div class="nutrition-information">
+            <div class="nutrition-texts">
+              <h2 class="carbs">Carbs</h2>
+              <h2 class="protein">Protein</h2>
+              <h2 class="fat">Fat</h2>
+            </div>
+            <div class="nutrition-numbers">
+              <h2 class="carbs-number">12g</h2>
+              <h2 class="protein-number">0.6g</h2>
+              <h2 class="fat-number">0.2g</h2>
+            </div>
           </div>
-          <div class="serving-size">
-            Serving Size
-            <div class="serving-size-slider">
+          <div class="right-container">
+            <div class="time">
+              <div class="label">TIME</div>
               <input
-                type="range"
-                id="serving-slider"
+                id="hour"
+                type="number"
                 min="1"
-                max="10"
-                value="1"
+                max="12"
+                value="12"
+                inputmode="numeric"
               />
-              <span id="value">1</span>
+              <span class="separator">:</span>
+              <input
+                id="minute"
+                type="number"
+                min="0"
+                max="59"
+                value="00"
+                inputmode="numeric"
+              />
+              <span id="meridiem" class="time-part" role="button">AM</span>
+            </div>
+            <div class="serving-size">
+              Serving Size
+              <div class="serving-size-slider">
+                <input
+                  type="range"
+                  id="serving-slider"
+                  min="1"
+                  max="10"
+                  value="1"
+                />
+                <span id="value">1</span>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="note">
-        <h5>Add Note</h5>
+        <div class="note">
+          <h5>Add Note</h5>
 
-        <div class="note-input">
-          <textarea
-            name="note"
-            id="note"
-            rows="3"
-            placeholder=" Write your note here..."
-          ></textarea>
+          <div class="note-input">
+            <textarea
+              name="note"
+              id="note"
+              rows="3"
+              placeholder=" Write your note here..."
+            ></textarea>
+          </div>
         </div>
+
+        <button class="confirm-button" id="confirm-button">
+          <p id="confirm-button-text">confirm</p>
+        </button>
       </div>
-
-      <button class="confirm-button" id="confirm-button">
-        <p id="confirm-button-text">confirm</p>
-      </button>
     </div>
-
     <script src="nutrition.js"></script>
   </body>
 </html>
