Fixing the font style and font size

--- a/nutrition.html
+++ b/nutrition.html
@@ -100,13 +100,13 @@
               name="note"
               id="note"
               rows="3"
-              placeholder=" Write your note here..."
+              placeholder=" Write your note here... "
             ></textarea>
           </div>
         </div>
 
         <button class="confirm-button" id="confirm-button">
-          <p id="confirm-button-text">confirm</p>
+          <p id="confirm-button-text">Confirm</p>
         </button>
       </div>
     </div>
